--- a/xmldb-api-benchmark/build.gradle
+++ b/xmldb-api-benchmark/build.gradle
@@ -38,21 +38,18 @@
  * <https://github.com/xmldb-org/>
  */
 plugins {
-  id 'org.ajoberstar.reckon.settings' version '1.0.1'
+//    id 'java-library'
+    id 'me.champeau.jmh' version '0.7.3'
 }
 
-reckon {
-  defaultInferredScope = 'minor'
-  snapshots()
-  scopeCalc = calcScopeFromProp().or(calcScopeFromCommitMessages())
-  stageCalc = calcStageFromProp()
-  // enable parse of old `xmldb-api-xxx' tags
-  tagParser = tagName -> java.util.Optional.of(tagName)
-          .map(name -> name.replaceFirst(/xmldb-api-(\d+\.\d+)/, '$1.0'))
-          .flatMap(name -> org.ajoberstar.reckon.core.Version.parse(name))
+dependencies {
+    jmh project(':xmldb-api')
+    jmh project(':xmldb-api-mockdb')
 }
 
-rootProject.name = 'xmldb-api-root'
-include 'xmldb-api'
-include 'xmldb-api-mockdb'
-include 'xmldb-api-benchmark'
+jmh {
+    jmhVersion = '1.37'
+    humanOutputFile = null
+    warmupIterations = 1
+    iterations = 1
+}
